# pinto-garch-dashboard

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  start.sh
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: compare.py  garch.py  meta.py  prices.py
backend/app/services/: backtests.py  data_source.py  garch_fit.py
frontend/: Dockerfile  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoadingSpinner.tsx
frontend/src/components/charts/: CondVolChart.tsx  LineChart.tsx  ResidualsChart.tsx
frontend/src/components/controls/: AssetSelect.tsx  DateRangePicker.tsx  ModelSelect.tsx
frontend/src/components/panels/: CrossAssetTable.tsx  ModelGridTable.tsx  ParamsCard.tsx  VaRBacktestPanel.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  popover.tsx  select.tsx  separator.tsx  table.tsx  tabs.tsx  tooltip.tsx
frontend/src/hooks/: useGarchFit.ts  useMeta.ts
frontend/src/lib/: api.ts  format.ts  theme.ts
frontend/src/pages/: Dashboard.tsx
