[project]
name = "pinto-garch-dashboard-backend"
version = "0.1.0"
description = "FastAPI backend for the Pinto GARCH Dashboard"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "arch>=7.0.0",
    "pandas>=2.2.0",
    "numpy>=1.26,<3",
    "scipy>=1.13.0",
    "pyyaml>=6.0",
    "pydantic>=2.8.0",
    "python-dateutil>=2.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
